--- a/assets.htm
+++ b/assets.htm
@@ -9,54 +9,49 @@
 </head>
 
 <body class="products">
-    <aside style="text-align:center">
+   
+    <nav class="w3-sidenav w3-white" style="width:25%">
         <a href="index.htm">Home</a>
         <a href="packages.htm">Packages</a>
         <a href="contact.htm">Contact Us</a>
-    </aside>
-    <div style="text-align:center">
-        <a href="index.htm">Home</a>
-        <a href="packages.htm">Packages</a>
-        <a href="contact.htm">Contact Us</a>
-    </div>
+    </nav>
 
+        <blockquote style="text-align:center">
+            <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h2 style="font-size:25px">Assets<br /></h2>
 
-    <blockquote style="text-align:center">
-        <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Assets<br /></h2>
+            <table rules="all">
 
-        <table rules="all">
+                <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
-            <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
+                <colgroup>
+                    <col span="1" style="width: 20%;">
+                    <col span="1" style="width: 20%;">
+                    <col span="1" style="width: 20%;">
+                </colgroup>
 
-            <colgroup>
-                <col span="1" style="width: 20%;">
-                <col span="1" style="width: 20%;">
-                <col span="1" style="width: 20%;">
-            </colgroup>
+                <tr>
+                    <td><p.picture><img class="picture" src="images/character.jpg" height="255" width="381" /></p.picture></td>
+                    <td><p.picture><img class="picture" src="images/item.jpg" height="255" width="381" /></p.picture></td>
+                    <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
+                </tr>
+                <tr>
+                    <th><h3 class="second">Characters</h3><p><em>Approx.</em> $120</p></th>
+                    <th><h3 class="second">Items</h3><p><em>Approx.</em> $25</p></th>
+                    <th><h3 class="second">Structures</h3><p><em>Approx.</em> $80</p></th>
+                </tr>
+                <tr>
+                    <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
+                    <td><p.picture><img class="picture" src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
+                    <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
+                </tr>
+                <tr>
+                    <th><h3 class="second">Landscapes</h3><p><em>Approx.</em> $100</p></th>
+                    <th><h3 class="second">Skyboxes</h3><p><em>Approx.</em> $15</p></th>
+                    <th><h3 class="second">Textures</h3><p><em>Approx.</em> $10</p></th>
+                </tr>
 
-            <tr>
-                <td><p.picture><img class="picture" src="images/character.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/item.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
-            </tr>
-            <tr>
-                <th><h3 class="second">Characters</h3><p><em>Approx.</em> $120</p></th>
-                <th><h3 class="second">Items</h3><p><em>Approx.</em> $25</p></th>
-                <th><h3 class="second">Structures</h3><p><em>Approx.</em> $80</p></th>
-            </tr>
-            <tr>
-                <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
-            </tr>
-            <tr>
-                <th><h3 class="second">Landscapes</h3><p><em>Approx.</em> $100</p></th>
-                <th><h3 class="second">Skyboxes</h3><p><em>Approx.</em> $15</p></th>
-                <th><h3 class="second">Textures</h3><p><em>Approx.</em> $10</p></th>
-            </tr>
-
-        </table>
-    </blockquote>
+            </table>
+        </blockquote>
 </body>
 </html>
