--- a/assets.htm
+++ b/assets.htm
@@ -10,14 +10,14 @@
 
 <body class="products">
    
-    <nav class="w3-sidenav w3-white" style="width:25%">
-        <br />
+    <nav style="width:25%">
+        <br>
         <a href="index.htm">Home</a>
         <a href="packages.htm">Packages</a>
         <a href="contact.htm">Contact Us</a>
     </nav>
 
-        <blockquote style="text-align:center">
+        <div style="margin-left:25%">
             <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
             <h2 style="font-size:25px">Assets<br /></h2>
 
@@ -53,6 +53,6 @@
                 </tr>
 
             </table>
-        </blockquote>
+        </div>
 </body>
 </html>
