--- a/assets.htm
+++ b/assets.htm
@@ -18,6 +18,8 @@
         <br />
         <a href="contact.htm">Contact Us</a>
         <br />
+        <a href="layout.htm"></a>
+        <br />
     </nav>
 
         <div style="margin-left:15%">
