--- a/layout.htm
+++ b/layout.htm
@@ -3,61 +3,28 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="StyleMain.css">
+    <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
-
 </head>
 
 <body class="products">
-    <div style="text-align:center">
+    
+    <nav style="width:15%" class="backgroundColor1">
+        <br />
         <a href="index.htm">Home</a>
-        <a href="assets.htm">Assets</a>
+        <br />
+        <a href="packages.htm">Packages</a>
+        <br />
         <a href="contact.htm">Contact Us</a>
-    </div>
+        <br />
+        <a href="layout.htm"></a>
+        <br />
+    </nav>
 
-    <blockquote style="text-align:center">
+    <div class="backgroundColor2"style="margin-left:15%">
         <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Packages<br /></h2>
-
-
-        <table rules="all">
-
-            <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
-
-            <colgroup>
-                <col span="1" style="width: 20%;">
-                <col span="1" style="width: 20%;">
-                <col span="1" style="width: 20%;">
-            </colgroup>
-
-            <tr style="font-size: x-large">
-                <th colspan="1"><h3 class="second">Small Assets</h3></th>
-                <th colspan="1"><h3 class="second">Large Assets</h3></th>
-                <th colspan="1"><h3 class="second">Complete Levels</h3></th>
-            </tr>;
-            <tr>
-                <td><p.picture><img class="picture" src="images/15package.png" height="264" width="334" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/4largepackage.png" height="264" width="334" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/1landscapepackage.png" height="264" width="334" /></p.picture></td>
-            </tr>
-            <tr>
-                <th><p>15 Small Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>4 Large Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>1 Complete Level</p><p><em>Approx.</em> $400</p></th>
-            </tr>
-            <tr>
-                <td><p.picture><img class="picture" src="images/45package.png" height="264" width="334" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/12largepackage.png" height="264" width="334" /></p.picture></td>
-                <td><p.picture><img class="picture" src="images/3landscapepackage.png" height="264" width="334" /></p.picture></td>
-            </tr>
-            <tr>
-                <th><p>45 Small Assets</p><p><em>Approx.</em> $750</p></th>
-                <th><p>12 Large Assets</p><p><em>Approx.</em> $750</p></th>
-                <th><p>3 Complete Levels</p><p><em>Approx.</em> $1000</p></th>
-            </tr>
-
-        </table>
-    </blockquote>
+        <h2 style="font-size:25px">Assets<br /></h2>     
+    </div>
 </body>
 </html>
