--- a/layout.htm
+++ b/layout.htm
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML5 Template">
 </head>
 
-<body class="products">
+<body>
     
     <nav style="width:15%" class="backgroundColor1">
         <br />
