--- a/layout.htm
+++ b/layout.htm
@@ -23,7 +23,10 @@
     </nav>
 
     <div class="backgroundColor2"style="margin-left:15%">
-        <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
+        <header>
+            <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
+        </header>
+       
         <h2 style="font-size:25px">Assets<br /></h2>     
     </div>
 </body>
