--- a/layout.htm
+++ b/layout.htm
@@ -27,7 +27,7 @@
             <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
        
-        <h2 style="font-size:25px">Assets-<br /></h2>     
+        <h2 style="font-size:25px">Assets<br /></h2>     
     </div>
 </body>
 </html>
