--- a/layout.htm
+++ b/layout.htm
@@ -22,7 +22,7 @@
         <br />
     </nav>
 
-    <div class="backgroundColor2 textAlignCenter"style="margin-left:15%">
+    <div class="backgroundColor2 textAlignCenter fontSpaceman"style="margin-left:15%">
         <header>
             <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
