--- a/layout.htm
+++ b/layout.htm
@@ -10,7 +10,7 @@
 
 <body>
     
-    <nav style="width:15%" class="backgroundColor1">
+    <nav style="width:15%" class="backgroundColor1 overlay">
         <br />
         <a href="index.htm">Home</a>
         <br />
