--- a/layout.htm
+++ b/layout.htm
@@ -11,7 +11,6 @@
 <body>
     
     <nav style="width:15%" class="backgroundColor1 overlay">
-        <br />
         <a href="index.htm">Home</a>
         <br />
         <a href="packages.htm">Packages</a>
@@ -22,12 +21,12 @@
         <br />
     </nav>
 
-    <div class="backgroundColor2 textAlignCenter fontSpaceman"style="margin-left:15%">
+    <div class="textAlignCenter fontSpaceman"style="margin-left:15%">
         <header>
-            <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
        
-        <h2 style="font-size:25px">Assets<br /></h2>     
+        <h2 class="color2" style="font-size:25px">Assets<br /></h2>     
     </div>
 </body>
 </html>
