--- a/layout.htm
+++ b/layout.htm
@@ -10,7 +10,7 @@
 
 <body>
     
-    <nav style="width:15%" class="backgroundColor1 overlay">
+    <nav style="width:15%" class="backgroundColor1 overlay textAlignCenter">
         <a href="index.htm">Home</a>
         <br />
         <a href="packages.htm">Packages</a>
