--- a/layout.htm
+++ b/layout.htm
@@ -11,14 +11,12 @@
 <body>
     
     <nav style="width:10%" class="backgroundColor1 overlay textAlignCenter">
-        <a href="index.htm">Home</a>
-        <br />
-        <a href="packages.htm">Packages</a>
-        <br />
-        <a href="contact.htm">Contact Us</a>
-        <br />
-        <a href="layout.htm"></a>
-        <br />
+        <ul>
+            <li><a href="index.htm">Home</a></li>
+            <li> <a href="packages.htm">Packages</a></li>
+            <li> <a href="contact.htm">Contact Us</a></li>
+            <li><a href="layout.htm"></a></li>
+        </ul>
     </nav>
 
     <div class="textAlignCenter fontSpaceman"style="margin-left:10%">
