--- a/layout.htm
+++ b/layout.htm
@@ -8,16 +8,13 @@
     <meta name="description" content="HTML5 Template">
 </head>
 
-<body>
-    
-    <nav style="width:10%" class="backgroundColor1 overlay textAlignCenter">
-        <ul>
+<body>    
+        <ul style="width:10%" class="backgroundColor1 overlay textAlignCenter">
             <li><a href="index.htm">Home</a></li>
             <li> <a href="packages.htm">Packages</a></li>
             <li> <a href="contact.htm">Contact Us</a></li>
             <li><a href="layout.htm"></a></li>
         </ul>
-    </nav>
 
     <div class="textAlignCenter fontSpaceman"style="margin-left:10%">
         <header>
