--- a/layout.htm
+++ b/layout.htm
@@ -11,6 +11,7 @@
 <body>    
         <ul style="width:10%" class="backgroundColor1 overlay textAlignCenter">
             <li><a href="index.htm">Home</a></li>
+            <li> <a href="assets.htm">Assets</a></li>
             <li> <a href="packages.htm">Packages</a></li>
             <li> <a href="contact.htm">Contact Us</a></li>
             <li><a href="layout.htm"></a></li>
