--- a/layout.htm
+++ b/layout.htm
@@ -9,7 +9,7 @@
 </head>
 
 <body>    
-        <ul style="width:12%" class="backgroundColor1 overlay textAlignCenter">
+        <ul style="width:12%" class="overlay textAlignCenter">
             <li><a href="index.htm">Home</a></li>
             <li> <a href="assets.htm">Assets</a></li>
             <li> <a href="packages.htm">Packages</a></li>
