--- a/assets.htm
+++ b/assets.htm
@@ -3,61 +3,59 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="StyleMain.css">
+    <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
 </head>
 
 <body class="products">
    
-    <nav style="width:15%">
-        <br/>
-        <a href="index.htm">Home</a>
-        <br />
-        <a href="packages.htm">Packages</a>
-        <br />
-        <a href="contact.htm">Contact Us</a>
-        <br />
-        <a href="layout.htm"></a>
-        <br />
-    </nav>
+    <ul style="width:12%" class="overlay textAlignCenter">
+        <li><a href="index.htm">Home</a></li>
+        <li> <a href="assets.htm">Assets</a></li>
+        <li> <a href="packages.htm">Packages</a></li>
+        <li> <a href="contact.htm">Contact Us</a></li>
+    </ul>
 
-        <div style="margin-left:15%">
-            <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-            <h2 style="font-size:25px">Assets<br /></h2>
+    <div class="textAlignCenter fontSpaceman" style="margin-left:12%">
+        <header>
+            <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
+        </header>
 
-            <table rules="all">
+        <h2 class="color2" style="font-size:25px">Assets<br /></h2>
 
-                <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
+        <table rules="all">
 
-                <colgroup>
-                    <col span="1" style="width: 20%;">
-                    <col span="1" style="width: 20%;">
-                    <col span="1" style="width: 20%;">
-                </colgroup>
+            <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
-                <tr>
-                    <td><p.picture><img class="picture" src="images/character.jpg" height="255" width="381" /></p.picture></td>
-                    <td><p.picture><img class="picture" src="images/item.jpg" height="255" width="381" /></p.picture></td>
-                    <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
-                </tr>
-                <tr>
-                    <th><h3 class="second">Characters</h3><p><em>Approx.</em> $120</p></th>
-                    <th><h3 class="second">Items</h3><p><em>Approx.</em> $25</p></th>
-                    <th><h3 class="second">Structures</h3><p><em>Approx.</em> $80</p></th>
-                </tr>
-                <tr>
-                    <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
-                    <td><p.picture><img class="picture" src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
-                    <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
-                </tr>
-                <tr>
-                    <th><h3 class="second">Landscapes</h3><p><em>Approx.</em> $100</p></th>
-                    <th><h3 class="second">Skyboxes</h3><p><em>Approx.</em> $15</p></th>
-                    <th><h3 class="second">Textures</h3><p><em>Approx.</em> $10</p></th>
-                </tr>
+            <colgroup>
+                <col span="1" style="width: 20%;">
+                <col span="1" style="width: 20%;">
+                <col span="1" style="width: 20%;">
+            </colgroup>
 
-            </table>
-        </div>
+            <tr>
+                <td><p.picture><img class="picture" src="images/character.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/item.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/structure.jpg" height="255" width="381" /></p.picture></td>
+            </tr>
+            <tr>
+                <th><h3 class="second">Characters</h3><p><em>Approx.</em> $120</p></th>
+                <th><h3 class="second">Items</h3><p><em>Approx.</em> $25</p></th>
+                <th><h3 class="second">Structures</h3><p><em>Approx.</em> $80</p></th>
+            </tr>
+            <tr>
+                <td><p.picture><img class="picture" src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
+                <td><p.picture><img class="picture" src="images/texture.jpg" height="255" width="381" /></p.picture></td>
+            </tr>
+            <tr>
+                <th><h3 class="second">Landscapes</h3><p><em>Approx.</em> $100</p></th>
+                <th><h3 class="second">Skyboxes</h3><p><em>Approx.</em> $15</p></th>
+                <th><h3 class="second">Textures</h3><p><em>Approx.</em> $10</p></th>
+            </tr>
+
+        </table>
+    </div>
 </body>
 </html>
