--- a/contact.htm
+++ b/contact.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="StyleMain.css">
+    <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
 
@@ -11,15 +11,19 @@
 
 <body class="secondary">
 
-    <div style="text-align:center">
-        <a href="index.htm">Home</a>
-        <a href="assets.htm">Assets</a>
-        <a href="packages.htm">Packages</a>
-    </div>
+    <ul style="width:12%" class="overlay textAlignCenter">
+        <li><a href="index.htm">Home</a></li>
+        <li> <a href="assets.htm">Assets</a></li>
+        <li> <a href="packages.htm">Packages</a></li>
+        <li> <a href="contact.htm">Contact Us</a></li>
+    </ul>
 
-    <blockquote style="text-align:center">
-        <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Contact Us<br /></h2>
+    <div class="textAlignCenter fontSpaceman" style="margin-left:12%">
+        <header>
+            <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
+        </header>
+
+        <h2 class="color2" style="font-size:25px">Assets<br /></h2>
         <hr />
         <h3 class="first" style="text-align:center">
             If you have any questions regarding your order, assets, asset packages, <br />
@@ -27,7 +31,7 @@
             We will contact you as soon as possible.
         </h3>
         <hr />
-    </blockquote>
+        </div>
         <form action="" style="align-content:center">
             <h3 class="first" style="text-align:center">
                 <label>
