--- a/contact.htm
+++ b/contact.htm
@@ -23,7 +23,7 @@
             <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2" style="font-size:25px">Assets<br /></h2>
+        <h2 class="color2" style="font-size:25px">Contact Us<br /></h2>
         <hr />
         <h3 class="first" style="text-align:center">
             If you have any questions regarding your order, assets, asset packages, <br />
