--- a/packages.htm
+++ b/packages.htm
@@ -22,7 +22,7 @@
             <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2" style="font-size:25px">Assets<br /></h2>
+        <h2 class="color2" style="font-size:25px">Packages<br /></h2>
 
 
         <table rules="all">
