--- a/assets.htm
+++ b/assets.htm
@@ -24,7 +24,7 @@
 
         <h2 class="color2" style="font-size:25px">Assets<br /></h2>
 
-        <table rules="all">
+        <table rules="all" class="fontMain color1">
 
             <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
