--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
         <h2 class="color2" style="font-size:25px">Next Generation Game Assets<br /></h2>
 
         <hr />
-        <h3 class="first" style="text-align:center">
+        <h3 class="first fontMain color1" style="text-align:center">
             Are you an independent game developer looking to take your game's graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
