--- a/packages.htm
+++ b/packages.htm
@@ -25,7 +25,7 @@
         <h2 class="color2" style="font-size:25px">Packages<br /></h2>
 
 
-        <table rules="all">
+        <table rules="all" class="fontMain" color1>
 
             <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
