--- a/assets.htm
+++ b/assets.htm
@@ -17,12 +17,12 @@
         <li> <a href="contact.htm">Contact Us</a></li>
     </ul>
 
-    <div class="textAlignCenter fontSpaceman" style="margin-left:12%">
+    <div class="textAlignCenter" style="margin-left:12%">
         <header>
-            <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2" style="font-size:25px">Assets<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:25px">Assets<br /></h2>
 
         <table rules="all" class="fontMain color1">
 
