--- a/contact.htm
+++ b/contact.htm
@@ -18,12 +18,12 @@
         <li> <a href="contact.htm">Contact Us</a></li>
     </ul>
 
-    <div class="textAlignCenter fontSpaceman" style="margin-left:12%">
+    <div class="textAlignCenter" style="margin-left:12%">
         <header>
-            <h1 class="color1" style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:50px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2" style="font-size:25px">Contact Us<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:25px">Contact Us<br /></h2>
         <hr />
         <h3 class="first fontMain color1" style="text-align:center">
             If you have any questions regarding your order, assets, asset packages, <br />
