--- a/assets.htm
+++ b/assets.htm
@@ -19,12 +19,12 @@
 
     <div class="textAlignCenter" style="margin-left:12%">
         <header>
-            <h1 class="color1 fontSpaceman" style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2 fontSpaceman" style="font-size:35px">Assets<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:30px">Assets<br /></h2>
 
-        <table rules="all" class="fontMain color1">
+        <table rules="all" class="fontMain color1" style="font-size:15px">
 
             <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
