--- a/contact.htm
+++ b/contact.htm
@@ -20,12 +20,12 @@
 
     <div class="textAlignCenter" style="margin-left:12%">
         <header>
-            <h1 class="color1 fontSpaceman" style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2 fontSpaceman" style="font-size:35px">Contact Us<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:30px">Contact Us<br /></h2>
         <hr />
-        <h3 class="first fontMain color1" style="text-align:center">
+        <h3 class="first fontMain color1" style="text-align:center; font-size:15px;">
             If you have any questions regarding your order, assets, asset packages, <br />
             or you would like a price qoute for your project, please submit the form below.<br />
             We will contact you as soon as possible.
