--- a/index.htm
+++ b/index.htm
@@ -20,13 +20,13 @@
 
     <div class="textAlignCenter" style="margin-left:12%">
         <header>
-            <h1 class="color1 fontSpaceman" style="font-size:50px">Dimension<br />Assets<br /></h1>
+            <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2 fontSpaceman" style="font-size:35px">Next Generation Game Assets<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:30px">Next Generation Game Assets<br /></h2>
 
         <hr />
-        <h3 class="first fontMain color1" style="text-align:center">
+        <h3 class="first fontMain color1" style="text-align:center; font-size:15px;">
             Are you an independent game developer looking to take your game's graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
