--- a/contact.htm
+++ b/contact.htm
@@ -18,7 +18,7 @@
         <li> <a href="contact.htm">Contact Us</a></li>
     </ul>
 
-    <div class="textAlignCenter" style="margin-left:12%">
+    <div class="textAlignCenter" style="margin-left:12%; align-content:center;">
         <header>
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
