--- a/packages.htm
+++ b/packages.htm
@@ -25,7 +25,7 @@
         <h2 class="color2 fontSpaceman" style="font-size:30px">Packages<br /></h2>
 
 
-        <table rules="all" class="fontMain color1">
+        <table rules="all" class="fontMain color1" style="font-size:25px">
 
             <caption style="font-size: medium"><p><em>Prices are only estimates.</em></p></caption>
 
