--- a/contact.htm
+++ b/contact.htm
@@ -19,7 +19,7 @@
     </ul>
 
     <div class="textAlignCenter" style="margin-left:12%; align-content:center;">
-        <header>
+        <header class="backgroundTransparent">
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
 
