--- a/packages.htm
+++ b/packages.htm
@@ -14,7 +14,7 @@
         <li><a href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
-        <li> <a href="contact.htm">Contact Us</a></li>
+        <li> <a href="contactus.htm">Contact Us</a></li>
     </ul>
 
     <div class="textAlignCenter" style="margin-left:10%; align-content:center;">
