--- a/contactus.htm
+++ b/contactus.htm
@@ -22,7 +22,7 @@
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
 
-        <h2 class="color2 fontSpaceman" style="font-size:35px">Assets<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:35px">Contact Us<br /></h2>
 
         <hr />
         <h3 class="first fontMain color1" style="text-align:center; font-size:20px;">
