--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <body class="secondary">
     
     <ul style="width:10%" class="overlay textAlignCenter">
-        <li><a href="index.htm">Home</a></li>
+        <li><a class="active" href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
         <li> <a href="contactus.htm">Contact Us</a></li>
