--- a/contactus.htm
+++ b/contactus.htm
@@ -10,7 +10,7 @@
 
 <body class="products">
    
-    <ul style="width:10%" class="overlay textAlignCenter">
+    <ul style="width:10%" class="overlay textAlignCenter fontMain">
         <li><a href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
