--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
 <body class="secondary">
     
-    <ul style="width:10%" class="overlay textAlignCenter">
+    <ul style="width:10%" class="overlay textAlignCenter fontMain">
         <li><a class="active" href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
