--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
  
 </head>
 
-<body class="secondary">
+<body>
     
     <ul style="width:10%" class="overlay textAlignCenter fontMain">
         <li><a class="active" href="index.htm">Home</a></li>
