--- a/packages.htm
+++ b/packages.htm
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class="products">
+<body>
     <ul style="width:10%" class="overlay textAlignCenter fontMain">
         <li><a href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
