--- a/contactus.htm
+++ b/contactus.htm
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML5 Template">
 </head>
 
-<body class="products">
+<body>
    
     <ul style="width:10%" class="overlay textAlignCenter fontMain">
         <li><a href="index.htm">Home</a></li>
