--- a/contactus.htm
+++ b/contactus.htm
@@ -68,7 +68,7 @@
                 <br />
                 <label>
                     Subject:
-                    <select name="subject">
+                    <select style="font-size:large" name="subject">
                         <option> Question </option>
                         <option> Price Quote </option>
                         <option> Problem </option>
