--- a/contactus.htm
+++ b/contactus.htm
@@ -26,7 +26,7 @@
 
         <hr />
         <br/>
-        <h3 class="first fontMain color1 backgroundTransparent" style="text-align:center; font-size:30px;">
+        <h3 class="first fontMain color1 backgroundTransparentPlain" style="text-align:center; font-size:30px;">
             If you have any questions regarding your order, assets, asset packages, <br />
             or you would like a price qoute for your project, please submit the form below.<br />
             We will contact you as soon as possible.
