--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 
         <hr />
         <br />
-        <h3 class="first fontMain color1 backgroundTransparent" style="font-size:30px">
+        <h3 class="first fontMain color1 backgroundTransparentPlain" style="font-size:30px">
             Are you an independent game developer looking to take your graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
