--- a/contactus.htm
+++ b/contactus.htm
@@ -85,5 +85,8 @@
             </h3>
         </form>
     </div>
+    <footer onplay= "document.getElementById('date').innerHTML = Date()">
+        <p id="date"></p>
+    </footer>
 </body>
 </html>
