--- a/contactus.htm
+++ b/contactus.htm
@@ -85,8 +85,9 @@
             </h3>
         </form>
     </div>
-    <footer onplay= "document.getElementById('date').innerHTML = Date()">
+    <footer>
         <p id="date"></p>
+        <script>document.getElementById("date").innerHTML = Date()</script>
     </footer>
 </body>
 </html>
