--- a/contactus.htm
+++ b/contactus.htm
@@ -87,7 +87,7 @@
     </div>
     <footer>
         <p>Today is:</p>
-        <p id="date">Today is:</p>
+        <p id="date"></p>
         <script>
             var d = new Date(month, day, year);
             document.getElementById("date").innerHTML = d;
