--- a/contactus.htm
+++ b/contactus.htm
@@ -86,8 +86,7 @@
         </form>
     </div>
     <footer>
-        <p>Today is:</p>
-        <p id="date"></p>
+        <p id="date">Today is:</p>
         <script>
             var d = new Date(month, day, year);
             document.getElementById("date").innerHTML = d;
