--- a/contactus.htm
+++ b/contactus.htm
@@ -88,8 +88,8 @@
     <footer>
         <p id="date">Today is:</p>
         <script>
-            var d = new Date(month, day, year);
-            document.getElementById("date").innerHTML = d;
+            var d = new Date();
+            document.getElementById("date").innerHTML = d.toDateString();
         </script>
     </footer>
 </body>
