--- a/contactus.htm
+++ b/contactus.htm
@@ -86,7 +86,7 @@
         </form>
     </div>
     <footer>
-        <p id="date"></p>
+        <p id="date">Today is:</p>
         <script>
             var d = new Date();
             document.getElementById("date").innerHTML = d.toDateString();
