--- a/contactus.htm
+++ b/contactus.htm
@@ -86,10 +86,10 @@
         </form>
     </div>
     <footer>
-        <p id="date">Today is:</p>
+        <p id="date"></p>
         <script>
             var d = new Date();
-            document.getElementById("date").innerHTML = d.toDateString();
+            document.getElementById("date").innerHTML = "Today is:" + d.toDateString();
         </script>
     </footer>
 </body>
