--- a/assets.htm
+++ b/assets.htm
@@ -56,5 +56,12 @@
 
         </table>
     </div>
+    <footer>
+        <p id="date"></p>
+        <script>
+            var d = new Date();
+            document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
+        </script>
+    </footer>
 </body>
 </html>
