--- a/packages.htm
+++ b/packages.htm
@@ -61,5 +61,12 @@
 
         </table>
         </div>
+    <footer>
+        <p id="date"></p>
+        <script>
+            var d = new Date();
+            document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
+        </script>
+    </footer>
 </body>
 </html>
