--- a/index.htm
+++ b/index.htm
@@ -33,12 +33,14 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>      
     </div>
-    <footer>
-        <p id="date"></p>
-        <script>
-            var d = new Date();
-            document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
-        </script>
-    </footer>
+    <div class="pageFill">
+        <footer>
+            <p id="date"></p>
+            <script>
+                var d = new Date();
+                document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
+            </script>
+        </footer>
+    </div>
 </body>
 </html>
