--- a/assets.htm
+++ b/assets.htm
@@ -56,12 +56,14 @@
 
         </table>
     </div>
-    <footer>
-        <p id="date"></p>
-        <script>
-            var d = new Date();
-            document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
-        </script>
-    </footer>
+    <div class="pageFill">
+        <footer>
+            <p id="date"></p>
+            <script>
+                var d = new Date();
+                document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
+            </script>
+        </footer>
+    </div>
 </body>
 </html>
