--- a/contactus.htm
+++ b/contactus.htm
@@ -85,12 +85,14 @@
             </h3>
         </form>
     </div>
-    <footer>
-        <p id="date"></p>
-        <script>
-            var d = new Date();
-            document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
-        </script>
-    </footer>
+    <div class="pageFill">
+        <footer>
+            <p id="date"></p>
+            <script>
+                var d = new Date();
+                document.getElementById("date").innerHTML = "Today is: " + d.toDateString();
+            </script>
+        </footer>
+    </div>
 </body>
 </html>
