--- a/contactus.htm
+++ b/contactus.htm
@@ -85,7 +85,7 @@
             </h3>
         </form>
     </div>
-    <div class="pageFill">
+    <div class="overlay">
         <footer>
             <p id="date"></p>
             <script>
