--- a/packages.htm
+++ b/packages.htm
@@ -61,7 +61,7 @@
 
         </table>
         </div>
-    <div class="pageFill">
+    <div class="overlay">
         <footer>
             <p id="date"></p>
             <script>
