--- a/contactus.htm
+++ b/contactus.htm
@@ -26,7 +26,7 @@
 
         <hr />
         <br/>
-        <h3 class="first fontMain color1 backgroundTransparentPlain" style="text-align:center; font-size:30px;">
+        <h3 class="first fontMain color1" style="text-align:center; font-size:30px;">
             If you have any questions regarding your order, assets, asset packages, <br />
             or you would like a price qoute for your project, please submit the form below.<br />
             We will contact you as soon as possible.
@@ -90,7 +90,7 @@
             <p id="date"></p>
             <script>
                 var d = new Date();
-                document.getElementById("date").innerHTML = "  Today is: " + d.toDateString() + "   ";
+                document.getElementById("date").innerHTML = "\tToday is: " + d.toDateString() + "   ";
             </script>
         </footer>
     </div>
