--- a/assets.htm
+++ b/assets.htm
@@ -61,7 +61,7 @@
             <p id="date"></p>
             <script>
                 var d = new Date();
-                document.getElementById("date").innerHTML = "  Today is: " + d.toDateString() + "   ";
+                document.getElementById("date").innerHTML = "\tToday is: " + d.toDateString() + "   ";
             </script>
         </footer>
     </div>
