--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 
         <hr />
         <br />
-        <h3 class="first fontMain color1 backgroundTransparentPlain" style="font-size:30px">
+        <h3 class="first fontMain color1" style="font-size:30px">
             Are you an independent game developer looking to take your graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
@@ -38,7 +38,7 @@
             <p id="date"></p>
             <script>
                 var d = new Date();
-                document.getElementById("date").innerHTML = "  Today is: " + d.toDateString() + "   ";
+                document.getElementById("date").innerHTML = "\tToday is: " + d.toDateString() + "   ";
             </script>
         </footer>
     </div>
