--- a/assets.htm
+++ b/assets.htm
@@ -56,7 +56,7 @@
 
         </table>
     </div>
-    <div class="overlay">
+    <div class="overlay" style="font-size: 10px">
         <footer>
             <p id="date"></p>
             <script>
