--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>      
     </div>
-    <div class="overlay">
+    <div class="overlay"  style="font-size: 10px">
         <footer>
             <p id="date"></p>
             <script>
