--- a/packages.htm
+++ b/packages.htm
@@ -61,7 +61,7 @@
 
         </table>
         </div>
-    <div class="overlay">
+    <div class="overlay"  style="font-size: 10px">
         <footer>
             <p id="date"></p>
             <script>
