--- a/contactus.htm
+++ b/contactus.htm
@@ -47,7 +47,7 @@
                 <br />
                 <label>
                     Email:
-                    <input type="email" id="eM" name="email" size="30" />
+                    <input type="text" id="eM" name="email" size="30" />
                 </label>
                 <label>
                     Phone:
