--- a/contactus.htm
+++ b/contactus.htm
@@ -80,7 +80,7 @@
                 <textarea id="cM" name="comment" rows="10"></textarea>
                 <br />
                 <br />
-                <input type="button" value="Submit" onclick="checkForm()"class="button1" />  
+                <input type="button" id="sub" value="Submit" onclick="checkForm()"class="button1" />  
                 <input type="reset" value="Reset" class="button2" />
             </h3>
            
