--- a/assets.htm
+++ b/assets.htm
@@ -14,7 +14,7 @@
         <li><a href="index.htm">Home</a></li>
         <li> <a class="active" href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
-        <li> <a href="contactus.htm">Contact Us</a></li>
+        <li> <a href="contactus.htm">Contact</a></li>
     </ul>
 
     <div class="textAlignCenter" style="margin-left:9%; align-content:center;">
