--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         <li><a class="active" href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
-        <li> <a href="contactus.htm">Contact Us</a></li>
+        <li> <a href="contactus.htm">Contact</a></li>
     </ul>
 
     <div class="textAlignCenter" style="margin-left:9%; align-content:center;">
