--- a/contactus.htm
+++ b/contactus.htm
@@ -47,11 +47,11 @@
                 <br />
                 <label>
                     Email:
-                    <input type="email" id="eM" name="email" size="30" />
+                    <input type="text" id="eM" name="email" size="30" />
                 </label>
                 <label>
                     Phone:
-                    <input type="tel" id="pN" name="phone" size="10" max="10" />
+                    <input type="text" id="pN" name="phone" size="10" max="10" />
                 </label>
                 <br />
                 <br />
