--- a/contactus.htm
+++ b/contactus.htm
@@ -58,7 +58,7 @@
                 <em> Preferred Contact Method: </em><br />
                 <label>
                     Email:
-                    <input class="radial" type="radio" name="method" />
+                    <input class="radial" type="radio" name="method" checked/>
                 </label>
                 <label>
                     Phone:
