--- a/contactus.htm
+++ b/contactus.htm
@@ -37,21 +37,21 @@
             <h3 class="first" style="text-align:center">
                 <label>
                     First Name:
-                    <input type="text" id="fN" name="firstName" size="20" />
+                    <input type="text" id="fN" name="firstName" size="20" required/>
                 </label>
                 <label>
                     Last Name:
-                    <input type="text" id="lN" name="lastName" size="20" />
+                    <input type="text" id="lN" name="lastName" size="20" required/>
                 </label>
                 <br />
                 <br />
                 <label>
                     Email:
-                    <input type="email" id="eM" name="email" size="30" />
+                    <input type="email" id="eM" name="email" size="30" required/>
                 </label>
                 <label>
                     Phone:
-                    <input type="tel" id="pN" name="phone" size="10" max="10" />
+                    <input type="tel" id="pN" name="phone" size="10" max="10" required/>
                 </label>
                 <br />
                 <br />
@@ -77,7 +77,7 @@
                 </label>
                 <br />
                 <br />
-                <textarea id="cM" name="comment" rows="10"></textarea>
+                <textarea id="cM" name="comment" rows="10" required></textarea>
                 <br />
                 <br />
                 <input type="button" id="sub" value="Submit" onclick="checkForm()"class="button1" />  
