--- a/index.htm
+++ b/index.htm
@@ -10,14 +10,25 @@
 </head>
 
 <body>
-    
+
+    <div class="dropdown" style="float:left;">
+        <button class="dropbtn">Home</button>
+        <div class="dropdown-content" style="left:0;">
+            <a href="assets.htm">Assets</a>
+            <a href="packages.htm">Packages</a>
+            <a href="contactus.htm">Contact</a>
+        </div>
+    </div>
+
+   <!--
     <ul style="width:9%" class="overlay textAlignCenter fontMain">
         <li><a class="active" href="index.htm">Home</a></li>
         <li> <a href="assets.htm">Assets</a></li>
         <li> <a href="packages.htm">Packages</a></li>
         <li> <a href="contactus.htm">Contact</a></li>
     </ul>
-
+    --> 
+    
     <div class="textAlignCenter" style="margin-left:9%; align-content:center;">
         <header class="backgroundTransparent">
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
