--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Home</button>
-        <div class="dropdown-content" style="left:0;">
+        <div class="dropdown-content" style="text-align:center;">
             <a href="assets.htm">Assets</a>
             <a href="packages.htm">Packages</a>
             <a href="contactus.htm">Contact</a>
