--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
     </ul>
     --> 
     
-    <div class="textAlignCenter" <!--style="margin-left:9%;--> align-content:center;">
+    <div class="textAlignCenter" align-content:center;">
         <header class="backgroundTransparent">
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
