--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <body>
 
     <div class="dropdown" style="float:left;">
-        <button class="dropbtn">Home</button>
+        <button class="dropbtn">Menu</button>
         <div class="dropdown-content" style="text-align:center;">
             <a href="assets.htm">Assets</a>
             <a href="packages.htm">Packages</a>
