--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Menu</button>
-        <div class="dropdown-content" style="text-align:center;">
+        <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="assets.htm">Assets</a>
             <a href="packages.htm">Packages</a>
             <a href="contactus.htm">Contact</a>
