--- a/contactus.htm
+++ b/contactus.htm
@@ -10,12 +10,14 @@
 
 <body>
    
-    <ul style="width:9%" class="overlay textAlignCenter fontMain">
-        <li><a href="index.htm">Home</a></li>
-        <li> <a href="assets.htm">Assets</a></li>
-        <li> <a href="packages.htm">Packages</a></li>
-        <li> <a class="active" href="contactus.htm">Contact</a></li>
-    </ul>
+    <div class="dropdown" style="float:left;">
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content" style="text-align:center; left:0;">
+            <a href="index.htm">Home</a>
+            <a href="assets.htm">Assets</a>
+            <a href="packages.htm">Packages</a>  
+        </div>
+    </div>
 
     <div class="textAlignCenter" style="margin-left:9%; align-content:center;">
         <header class="backgroundTransparent">
