--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="assets.htm">Assets</a>
             <a href="packages.htm">Packages</a>
-            <a href="contactus.htm">Contact</a>
+            <a href="contactus.htm">Contact Us</a>
         </div>
     </div>
 
