--- a/contactus.htm
+++ b/contactus.htm
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="textAlignCenter" style="margin-left:9%; align-content:center;">
+    <div class="textAlignCenter" style="align-content:center;">
         <header class="backgroundTransparent">
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
         </header>
