--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,11 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="assets.htm">Assets</a>
-            <a href="packages.htm">Packages</a>
+            <button class="dropbtn">Products</button>
+            <div class="dropdown-content" style="text-align:center; left:0;">
+                <a href="assets.htm">Assets</a>
+                <a href="packages.htm">Packages</a>              
+            </div>
             <a href="contactus.htm">Contact Us</a>
         </div>
     </div>
