--- a/packages.htm
+++ b/packages.htm
@@ -14,7 +14,7 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <a href="packages.htm">Packages</a>
+            <a href="assets.htm">Assets</a>
             <a href="contactus.htm">Contact Us</a>
         </div>
     </div>
