--- a/index.htm
+++ b/index.htm
@@ -12,10 +12,10 @@
 <body>
 
     <div class="dropdown" style="float:left;">
-        <button class="dropbtn">Menu</button>
+        <button class="dropbtn1">Menu</button>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="assets.htm">Assets</a>
-            <button class="dropbtn">Products</button>
+            <button class="dropbtn2">Products</button>
             <div class="dropdown-content" style="text-align:center; left:0;">
                 <a href="assets.htm">Assets</a>
                 <a href="packages.htm">Packages</a>              
