--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     <div class="dropdown" style="float:left;">
         <button class="dropbtn1">Menu</button>
         <div class="dropdown-content" style="text-align:center; left:0;">
-            <a href="assets.htm">Home</a>
+            <a href="index.htm">Home</a>
             <button class="dropbtn2">Products</button>
             <div class="dropdown-content" style="text-align:center; left:0;">
                 <a href="assets.htm">Assets</a>
