--- a/index.htm
+++ b/index.htm
@@ -15,13 +15,15 @@
         <button class="dropbtn1">Menu</button>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <button class="dropbtn2">Products</button>
-            <div class="dropdown-content" style="text-align:center; left:0;">
-                <a href="assets.htm">Assets</a>
-                <a href="packages.htm">Packages</a>              
+            <div class="dropdown" style="float:left;">
+                <button class="dropbtn2">Products</button>
+                <div class="dropdown-content" style="text-align:center; left:0;">
+                    <a href="assets.htm">Assets</a>
+                    <a href="packages.htm">Packages</a>
+                </div>
+                </div>
+                <a href="contactus.htm">Contact Us</a>
             </div>
-            <a href="contactus.htm">Contact Us</a>
-        </div>
     </div>
 
    <!--
