--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
             <div class="dropdown" style="float:left;">
-                <button class="dropbtn2">Products</button>
+                <a class="dropbtn2">Products</a>
                 <div class="dropdown-content" style="text-align:center; left:0;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>
