--- a/index.htm
+++ b/index.htm
@@ -12,16 +12,11 @@
 <body>
 
     <div class="dropdown" style="float:left;">
-        <button class="dropbtn1">Menu</button>
+        <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-            <div class="dropdown" style="float:left;">
-                <a class="dropbtn2">Products</a>
-                <div class="dropdown-content" style="text-align:center; left:0;">
-                    <a href="assets.htm">Assets</a>
-                    <a href="packages.htm">Packages</a>
-                </div>
-                </div>
+             <a href="assets.htm">Assets</a>
+               <a href="packages.htm">Packages</a>             
                 <a href="contactus.htm">Contact Us</a>
             </div>
     </div>
