--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="overlayRight">
+        <img src="images/logo.png" />
+    </div>
 
     <div class="dropdown" style="float:left;">
         <a class="dropbtn1">Menu</a>
