--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <body>
    
     <div class="dropdown" style="float:left;">
-        <a class="dropbtn1">Menu \/</a>
+        <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
              <a href="assets.htm">Assets</a>
