--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-             <a href="assets.htm">Assets</a>
+             <a style="display:none" href="assets.htm">Products</a>
                <a href="packages.htm">Packages</a>             
                 <a href="contactus.htm">Contact Us</a>
             </div>
