--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,10 @@
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
              <a class="dropbtn1">Products</a>
-            <a style="display:none" href="assets.htm">Assets</a> 
-               <a style="display:none" href="packages.htm">Packages</a>             
+            <div class="dropdown-content" style="text-align:center; left:0;">
+                <a style="display:none" href="assets.htm">Assets</a>
+                <a style="display:none" href="packages.htm">Packages</a>
+                </div>
                 <a href="contactus.htm">Contact Us</a>
             </div>
     </div>
