--- a/index.htm
+++ b/index.htm
@@ -15,11 +15,13 @@
         <a class="dropbtn1">Menu</a>
         <div class="dropdown-content" style="text-align:center; left:0;">
             <a href="index.htm">Home</a>
-             <a class="dropbtn2">Products</a>
-            <div style="display:none; text-align:center; left:0;" class="dropdown-content2">
-                <a href="assets.htm">Assets</a>
-                <a href="packages.htm">Packages</a>
+            <div class="dropdown2">
+                <a class="dropbtn2">Products</a>
+                <div style="display:none; text-align:center; left:0;" class="dropdown-content2">
+                    <a href="assets.htm">Assets</a>
+                    <a href="packages.htm">Packages</a>
                 </div>
+            </div>
                 <a href="contactus.htm">Contact Us</a>
             </div>
     </div>
