--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
             <a href="index.htm">Home</a>
             <div class="dropdown2">
                 <button onclick="myFunction()" class="dropbtn2">Products</button>
-                <div id="myDropdown2" class="dropdown-content2">
+                <div id="myDropdown2" class="dropdown-content2" style="left:auto;">
                     <a href="assets.htm">Assets</a>
                     <a href="packages.htm">Packages</a>                    
                 </div>
